cmake_minimum_required(VERSION 3.5.1)
project(REACTOR VERSION 0.1.0 LANGUAGES CXX)
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/Library/Developer/CommandLineTools/SDKs/MacOSX15.1.sdk/usr/include")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Debug)
include_directories(${CMAKE_SOURCE_DIR}/include)
# include_directories(/Library/Developer/CommandLineTools/SDKs/MacOSX15.1.sdk/usr/include)
# include_directories(/Library/Developer/CommandLineTools/SDKs/MacOSX15.1.sdk/usr/include/c++/v1)
file(GLOB SRC_FILES src/*.cpp)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
add_executable(main ./src/main.cpp ${SRC_FILES})
